--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,14 @@ build/
 *.pyc
 *.dot
 
+# Ignore librairies
+libs/
+
 # Ignore IDE and text editors
 .vscode
 
-# Ignore output files
-output/
+# Ignore vagrant
+.vagrant
 
-# Ignore librairies
-lib/*
-!lib/json/
-
-# Ignore exemples
-exemples/expected.c
-exemples/ressources.h
+# Ignore log files
+*.log
